overlays/preview/delete-legacy-mw.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-legacy-host
$patch: delete
