overlays/preview/delete-recorder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ggr-trafic-recorder
$patch: delete
