overlays/preview/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ggr-trafic
spec:
  template:
    spec:
      containers:
        - name: web
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
