overlays/preview/delete-recorder-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ggr-trafic-recorder
$patch: delete
