overlays/preview/delete-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggr-trafic-http
$patch: delete
