overlays/preview/delete-legacy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggr-trafic-legacy
$patch: delete
