overlays/preview/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ggr-trafic-test-http
  labels:
    app.kubernetes.io/name: ggr-trafic
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ggr-trafic-preview-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: ggr-trafic-test.k3s.lpb.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ggr-trafic
                port:
                  number: 8080
